<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="8dp"
                    android:src="@drawable/addimage"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_image" />

                <Spinner
                    android:id="@+id/raritySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/spinnerStyle"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/speciesTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/species">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/speciesET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/notesTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/notes">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/notesET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/saveObservation"
                        android:text="@string/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/cancelObservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        style="?android:attr/buttonBarButtonStyle"/>

                </LinearLayout>

            </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>